# openai-agentic-rag-project

./: README.md  main.py  pyproject.toml
src/openai/: __init__.py  const.py  openai.py
