[project]
name = "python"
version = "0.1.0"
description = "AI Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.15.0",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "numpy>=2.4.6",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "transformers>=5.8.1",
]
